--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
       <div class="list-group-item college-card">
         <div class="row">
           <div class="col-2">
-            <img src="https://via.placeholder.com/100" alt="" class="college-image">
+            <img src="colleges/albany.webp" alt="Albany Image" class="college-image">
           </div>
           <div class="col-7 college-info">
             <h5></h5>
-            <p><strong>Address: </strong> </p>
-            <p><strong>Website: </strong> </p>
-            <p><strong>Google Maps: </strong> 
-                <a href="#" target="_blank">View on Google Maps</a>
+            <p><strong>Address: </strong>1400 Washington Avenue, NY, US </p>
+            <p><strong>Website: </strong><a href="https://www.albany.edu/" target="_blank">https://www.albany.edu/</a> </p>
+            <p><strong>Google Maps: </strong>  <a href="https://maps.google.com?q=1400+Washington+Ave,+NY,+US"
+                target="_blank">View on Google Maps</a>
             </p>
           </div>
         </div>
       </div>
 
       <!-- College 3 -->
-
+      
 
       <!-- College 4 -->
 
