--- a/index.html
+++ b/index.html
@@ -69,10 +69,38 @@
       </div>
 
       <!-- College 4 -->
-
+      <div class="list-group-item college-card">
+        <div class="row">
+          <div class="col-2">
+            <img src="colleges/husky.jpeg" alt="NYU Image" class="college-image">
+          </div>
+          <div class="col-7 college-info">
+            <h5></h5>
+            <p><strong>Address: </strong>70 Washington Square South, NY, US </p>
+            <p><strong>Website: </strong><a href="https://www.nyu.edu/" target="_blank">https://www.nyu.edu/</a> </p>
+            <p><strong>Google Maps: </strong>  <a href="https://maps.google.com?q=70+Washington+Square+South,+NY,+US"
+                target="_blank">View on Google Maps</a>
+            </p>
+          </div>
+        </div>
+      </div>
 
       <!-- College 5 -->
-
+      <div class="list-group-item college-card">
+        <div class="row">
+          <div class="col-2">
+            <img src="colleges/husky.jpeg" alt="NYU Image" class="college-image">
+          </div>
+          <div class="col-7 college-info">
+            <h5></h5>
+            <p><strong>Address: </strong>70 Washington Square South, NY, US </p>
+            <p><strong>Website: </strong><a href="https://www.nyu.edu/" target="_blank">https://www.nyu.edu/</a> </p>
+            <p><strong>Google Maps: </strong>  <a href="https://maps.google.com?q=70+Washington+Square+South,+NY,+US"
+                target="_blank">View on Google Maps</a>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
 
   </div>
